fixed contact page look and feel

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Template Name: Christina
-Template URI: https://demo.templatesjungle.com/christina/
+Template Name: Uplift Music
+Template URI: https://demo.templatesjungle.com/Uplift Music/
 Author: TemplatesJungle
 Author URI: https://templatesjungle.com/
 Description: Fashion Photographer is specially designed product packaged for Fashion Photographer by TemplatesJungle.
