--- a/css/style.css
+++ b/css/style.css
@@ -1722,6 +1722,7 @@ h6.light a:hover {
 }
 .bg-overlay{
   background-color: rgba(0, 0, 0, 0.31) !important;
+  border-radius:1%;
 
 }
 .wrap-shadow-inset {
