--- a/css/style.css
+++ b/css/style.css
@@ -1717,7 +1717,7 @@ h6.light a:hover {
   background-color: #000 !important;
 }
 .bg-grey {
-  background-color: var(--bs-1) ;
+  background-color: var(--bs-dark) ;
 
 }
 .bg-overlay{
@@ -2126,6 +2126,24 @@ h1.section-title:after {
 .pr-130 { padding-right: 130px; }
 .pr-140 { padding-right: 140px; }
 .pr-150 { padding-right: 150px; }
+
+.pl-5 { padding-left: 5px; }
+.pl-10 { padding-left: 10px; }
+.pl-20 { padding-left: 20px; }
+.pl-30 { padding-left: 30px; }
+.pl-40 { padding-left: 40px; }
+.pl-50 { padding-left: 50px; }
+.pl-60 { padding-left: 60px; }
+.pl-70 { padding-left: 70px; }
+.pl-80 { padding-left: 80px; }
+.pl-90 { padding-left: 90px; }
+.pl-100 { padding-left: 100px; }
+.pl-110 { padding-left: 110px; }
+.pl-120 { padding-left: 120px; }
+.pl-130 { padding-left: 130px; }
+.pl-140 { padding-left: 140px; }
+.pl-150 { padding-left: 150px; }
+
 
 .pb-5 { padding-bottom: 5px; }
 .pb-10 { padding-bottom: 10px; }
