--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -91,11 +91,64 @@ html {
   }
 }
 
-
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
-pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
-s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+div pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+figure,
+header,
+nav,
+section,
+article,
+aside,
+footer,
+figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -123,13 +176,20 @@ html[xmlns] .clearfix {
   height: 1%;
 }
 
-ul, li {
+ul,
+li {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-header, nav, section, article, aside, footer, hgroup {
+header,
+nav,
+section,
+article,
+aside,
+footer,
+hgroup {
   display: block;
 }
 
@@ -137,8 +197,9 @@ header, nav, section, article, aside, footer, hgroup {
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Poppins', sans-serif;
+html,
+body {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   background-color: #fff;
   font-size: 16px;
@@ -149,14 +210,19 @@ html, body {
 
 a {
   text-decoration: none !important;
-  color: #3CF;
+  color: #3cf;
 }
 
 a:hover {
-	color: #FC3;
+  color: #fc3;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -184,7 +250,7 @@ global styles
 html,
 body {
   background: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 ::selection {
@@ -198,7 +264,8 @@ body {
 }
 
 @media (max-width: 991px) {
-  html, body {
+  html,
+  body {
     overflow-x: hidden;
   }
   .mobile-top-fix {
@@ -222,7 +289,7 @@ body {
   border-radius: 22px;
   font-weight: 500;
   text-transform: uppercase;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .main-button-red a:hover {
@@ -238,7 +305,7 @@ body {
   border-radius: 22px;
   font-weight: 500;
   text-transform: uppercase;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .main-button-yellow a:hover {
@@ -248,15 +315,14 @@ body {
 .section-heading h2 {
   line-height: 40px;
   margin-top: 0px;
-  margin-bottom: 50px; 
+  margin-bottom: 50px;
   padding-bottom: 20px;
-  border-bottom: 1px solid rgba(250,250,250,0.15);
+  border-bottom: 1px solid rgba(250, 250, 250, 0.15);
   font-size: 22px;
   font-weight: 700;
   text-transform: uppercase;
   color: #fff;
 }
-
 
 /* 
 ---------------------------------------------
@@ -289,7 +355,7 @@ header
 .sub-header .right-icons ul li a {
   color: #fff;
   font-size: 14px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .sub-header .right-icons ul li a:hover {
@@ -297,48 +363,48 @@ header
 }
 
 .sub-header .left-content p em {
-   font-style: normal;
-   color: #f5a425;
+  font-style: normal;
+  color: #f5a425;
 }
 
 .background-header {
-  background-color: #fff!important;
-  height: 80px!important;
-  position: fixed!important;
-  top: 0!important;
+  background-color: #fff !important;
+  height: 80px !important;
+  position: fixed !important;
+  top: 0 !important;
   left: 0;
   right: 0;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) !important;
 }
 
 .background-header .main-nav .nav li a {
-  color: #1e1e1e!important;
+  color: #1e1e1e !important;
 }
 
 .background-header .logo,
 .background-header .main-nav .nav li a {
-  color: #1e1e1e!important;
+  color: #1e1e1e !important;
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #fb5849!important;
+  color: #fb5849 !important;
 }
 
 .background-header .nav li a.active {
-  color: #fb5849!important;
+  color: #fb5849 !important;
 }
 
 .header-area {
-  background-color: rgba(250,250,250,0.15);
+  background-color: rgba(250, 250, 250, 0.15);
   position: absolute;
-  
+
   left: 0;
   right: 0;
   z-index: 100;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header-area .main-nav {
@@ -408,12 +474,12 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #f5a425!important;
+  color: #f5a425 !important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #f5a425!important;
+  color: #f5a425 !important;
   opacity: 1;
 }
 
@@ -443,7 +509,7 @@ header
   overflow: hidden;
   top: 40px;
   opacity: 0;
-  transition: all .3s;
+  transition: all 0.3s;
   transform: translateY(+2em);
   visibility: hidden;
   z-index: -1;
@@ -459,7 +525,7 @@ header
   opacity: 1;
   display: block;
   background: #f7f7f7;
-  color: #2a2a2a!important;
+  color: #2a2a2a !important;
   padding-left: 20px;
   height: 40px;
   line-height: 40px;
@@ -475,7 +541,7 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #f5a425!important;
+  color: #f5a425 !important;
   padding-left: 25px;
 }
 
@@ -634,7 +700,7 @@ header
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #f5a425!important;
+    color: #f5a425 !important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -692,7 +758,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #f5a425!important;
+    color: #f5a425 !important;
   }
   .header-area .main-nav .nav li.has-sub ul.sub-menu {
     position: relative;
@@ -717,12 +783,13 @@ header
     height: auto;
   }
   .header-area .main-nav .nav li.has-sub:after {
-    color: #3B566E;
+    color: #3b566e;
     right: 30px;
     font-size: 14px;
     top: 15px;
   }
-  .header-area .main-nav .nav li.submenu:hover ul, .header-area .main-nav .nav li.submenu:focus ul {
+  .header-area .main-nav .nav li.submenu:hover ul,
+  .header-area .main-nav .nav li.submenu:focus ul {
     height: 0px;
   }
 }
@@ -732,7 +799,6 @@ header
     display: flex !important;
   }
 }
-
 
 /* 
 ---------------------------------------------
@@ -748,26 +814,26 @@ banner
 }
 
 #bg-video {
-    min-width: 100%;
-    min-height: 100vh;
-    max-width: 100%;
-    max-height: 100vh;
-    object-fit: cover;
-    z-index: -1;
+  min-width: 100%;
+  min-height: 100vh;
+  max-width: 100%;
+  max-height: 100vh;
+  object-fit: cover;
+  z-index: -1;
 }
 
 #bg-video::-webkit-media-controls {
-    display: none !important;
+  display: none !important;
 }
 
 .video-overlay {
-    position: absolute;
-    background-color: rgba(31,39,43,0.75);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
+  position: absolute;
+  background-color: rgba(31, 39, 43, 0.75);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
 }
 
 .main-banner .caption {
@@ -812,7 +878,6 @@ banner
 }
 
 @media screen and (max-width: 767px) {
-
   .main-banner .caption h6 {
     font-weight: 500;
   }
@@ -820,9 +885,7 @@ banner
   .main-banner .caption h2 {
     font-size: 36px;
   }
-
 }
-
 
 /*
 ---------------------------------------------
@@ -837,7 +900,7 @@ services
 }
 
 .services .item {
-  background-image: url(../images/service-item-bg.jpg);
+  background-image: url(../images/musicStock/caleb-george-pH88tHG-1yw-unsplash.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -872,8 +935,8 @@ services
   top: 50%;
   transform: translateY(-25px);
 }
-    
-.services .owl-nav .owl-prev{
+
+.services .owl-nav .owl-prev {
   margin-right: 10px;
   outline: none;
   position: absolute;
@@ -887,11 +950,11 @@ services
 
 .services .owl-nav .owl-prev:before {
   display: inline-block;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   color: #1e1e1e;
   font-size: 25px;
   font-weight: 700;
-  content: '\f104';
+  content: "\f104";
   background-color: #fff;
   width: 50px;
   height: 50px;
@@ -901,7 +964,7 @@ services
 
 .services .owl-nav .owl-prev {
   opacity: 1;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .services .owl-nav .owl-prev:hover {
@@ -910,14 +973,14 @@ services
 
 .services .owl-nav .owl-next {
   opacity: 1;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .services .owl-nav .owl-next:hover {
   opacity: 0.9;
 }
 
-.services .owl-nav .owl-next{
+.services .owl-nav .owl-next {
   margin-left: 10px;
   outline: none;
   position: absolute;
@@ -926,18 +989,17 @@ services
 
 .services .owl-nav .owl-next:before {
   display: inline-block;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   color: #1e1e1e;
   font-size: 25px;
   font-weight: 700;
-  content: '\f105';
+  content: "\f105";
   background-color: #fff;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   line-height: 50px;
 }
-
 
 /*
 ---------------------------------------------
@@ -946,7 +1008,7 @@ upcoming meetings
 */
 
 section.upcoming-meetings {
-  background-image: url(../images/meetings-bg.jpg);
+  background-image: url(../images/pexels-adrien-olichon-2387793.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -984,7 +1046,7 @@ section.upcoming-meetings .categories ul li a {
   font-size: 15px;
   color: #1f272b;
   font-weight: 500;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 section.upcoming-meetings .categories ul li a:hover {
@@ -1025,7 +1087,7 @@ section.upcoming-meetings .categories .main-button-red a {
   font-size: 16px;
   color: #1f272b;
   font-weight: 600;
-  background-color: rgba(250,250,250,0.9);
+  background-color: rgba(250, 250, 250, 0.9);
   padding: 7px 12px;
   border-radius: 10px;
 }
@@ -1072,8 +1134,6 @@ section.upcoming-meetings .categories .main-button-red a {
   font-size: 14px;
 }
 
-
-
 /*
 ---------------------------------------------
 apply now
@@ -1081,7 +1141,8 @@ apply now
 */
 
 section.apply-now {
-  background-image: url(../images/apply-bg.jpg);
+  background-image: url(../images/musicStock/oscar-keys-ojVMh1QTVGY-unsplash.jpg);
+
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1090,7 +1151,7 @@ section.apply-now {
 }
 
 section.apply-now .item {
-  background-color: rgba(250,250,250,0.15);
+  background-color: rgba(250, 250, 250, 0.15);
   padding: 40px;
   margin-bottom: 30px;
 }
@@ -1121,7 +1182,7 @@ section.apply-now .item p {
   border-bottom: none;
 }
 .accordion-head {
-  padding: 20px;  
+  padding: 20px;
   font-size: 18px;
   font-weight: 700;
   color: #1f272b;
@@ -1157,7 +1218,6 @@ section.apply-now .item p {
   padding-top: 0;
 }
 
-
 /* 
 ---------------------------------------------
 courses
@@ -1165,7 +1225,7 @@ courses
 */
 
 section.our-courses {
-  background-image: url(../images/meetings-bg.jpg);
+  background-image: url(../images/pexels-adrien-olichon-2387793.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1182,7 +1242,7 @@ section.our-courses {
   padding: 25px;
   font-size: 18px;
   color: #1f272b;
-  text-align: center; 
+  text-align: center;
   border-bottom: 1px solid #eee;
 }
 
@@ -1225,7 +1285,7 @@ section.our-courses {
 }
 
 .our-courses .owl-dots .owl-dot {
-  transition: all .5s;
+  transition: all 0.5s;
   width: 7px;
   height: 7px;
   background-color: #fff;
@@ -1239,8 +1299,8 @@ section.our-courses {
   height: 8px;
   border-radius: 4px;
 }
-    
-.our-courses .owl-nav .owl-prev{
+
+.our-courses .owl-nav .owl-prev {
   margin-right: 10px;
   outline: none;
   position: absolute;
@@ -1254,11 +1314,11 @@ section.our-courses {
 
 .our-courses .owl-nav .owl-prev:before {
   display: inline-block;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   color: #1e1e1e;
   font-size: 25px;
   font-weight: 700;
-  content: '\f104';
+  content: "\f104";
   background-color: #fff;
   width: 50px;
   height: 50px;
@@ -1268,7 +1328,7 @@ section.our-courses {
 
 .our-courses .owl-nav .owl-prev {
   opacity: 1;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .our-courses .owl-nav .owl-prev:hover {
@@ -1277,14 +1337,14 @@ section.our-courses {
 
 .our-courses .owl-nav .owl-next {
   opacity: 1;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .our-courses .owl-nav .owl-next:hover {
   opacity: 0.9;
 }
 
-.our-courses .owl-nav .owl-next{
+.our-courses .owl-nav .owl-next {
   margin-left: 10px;
   outline: none;
   position: absolute;
@@ -1293,18 +1353,17 @@ section.our-courses {
 
 .our-courses .owl-nav .owl-next:before {
   display: inline-block;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   color: #1e1e1e;
   font-size: 25px;
   font-weight: 700;
-  content: '\f105';
+  content: "\f105";
   background-color: #fff;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   line-height: 50px;
 }
-
 
 /*
 ---------------------------------------------
@@ -1313,7 +1372,7 @@ our facts
 */
 
 section.our-facts {
-  background-image: url(../images/facts-bg.jpg);
+  background-image: url(../images/musicStock/pexels-david-mceachan-87503.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1332,28 +1391,28 @@ section.our-facts h2 {
 
 .count-area-content {
   text-align: center;
-  background-color: rgba(250,250,250,0.15);
+  background-color: rgba(250, 250, 250, 0.15);
   border-radius: 20px;
   padding: 25px 30px 35px 30px;
   margin: 15px 0px;
 }
 
 .percentage .count-digit:after {
-  content: '%';
+  content: "%";
   margin-left: 3px;
 }
 
 .count-digit {
-    margin: 5px 0px;
-    color: #f5a425;
-    font-weight: 700;
-    font-size: 36px;
+  margin: 5px 0px;
+  color: #f5a425;
+  font-weight: 700;
+  font-size: 36px;
 }
 .count-title {
-    font-size: 18px;
-    font-weight: 500;
-    color: #fff;
-    letter-spacing: 0.5px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  letter-spacing: 0.5px;
 }
 
 .new-students {
@@ -1375,7 +1434,6 @@ section.our-facts .video img {
   max-width: 56px;
 }
 
-
 /* 
 ---------------------------------------------
 contact us
@@ -1383,7 +1441,7 @@ contact us
 */
 
 section.contact-us {
-  background-image: url(../images/meetings-bg.jpg);
+  background-image: url(../images/pexels-adrien-olichon-2387793.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1447,7 +1505,7 @@ section.contact-us #contact button {
   border-radius: 22px;
   font-weight: 500;
   text-transform: uppercase;
-  transition: all .3s;
+  transition: all 0.3s;
   border: none;
   outline: none;
 }
@@ -1464,7 +1522,7 @@ section.contact-us .right-info {
 
 section.contact-us .right-info ul li {
   display: inline-block;
-  border-bottom: 1px solid rgba(250,250,250,0.15);
+  border-bottom: 1px solid rgba(250, 250, 250, 0.15);
   margin-bottom: 30px;
   padding-bottom: 30px;
 }
@@ -1492,7 +1550,7 @@ section.contact-us .right-info ul li span {
 .footer {
   text-align: center;
   margin-top: 140px;
-  border-top: 1px solid rgba(250,250,250,0.15);
+  border-top: 1px solid rgba(250, 250, 250, 0.15);
   padding: 50px 0px;
 }
 .footer p {
@@ -1504,7 +1562,6 @@ section.contact-us .right-info ul li span {
 .footer p a {
   color: #f5a425;
 }
-
 
 /*
 ---------------------------------------------
@@ -1541,7 +1598,6 @@ section.heading-page h2 {
   letter-spacing: 1px;
 }
 
-
 /*
 ---------------------------------------------
 upcoming meetings page
@@ -1572,7 +1628,7 @@ section.meetings-page .filters li {
   border-radius: 22px;
   font-weight: 600;
   text-transform: uppercase;
-  transition: all .3s;
+  transition: all 0.3s;
   cursor: pointer;
   margin: 0px 3px;
 }
@@ -1605,7 +1661,7 @@ section.meetings-page .pagination ul li a {
   line-height: 40px;
   font-weight: 600;
   font-size: 15px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 section.meetings-page .main-button-red {
@@ -1643,7 +1699,7 @@ section.meetings-page .pagination ul li a:hover {
   font-size: 16px;
   color: #1f272b;
   font-weight: 600;
-  background-color: rgba(250,250,250,0.9);
+  background-color: rgba(250, 250, 250, 0.9);
   padding: 7px 12px;
   border-radius: 10px;
 }
@@ -1657,7 +1713,7 @@ section.meetings-page .pagination ul li a:hover {
 
 .meeting-single-item .thumb .date {
   position: absolute;
-  background-color: rgba(250,250,250,0.9);
+  background-color: rgba(250, 250, 250, 0.9);
   width: 80px;
   height: 80px;
   text-align: center;
@@ -1730,7 +1786,7 @@ section.meetings-page .pagination ul li a:hover {
 .meeting-single-item .down-content .share ul li a {
   font-size: 14px;
   color: #1f272b;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .meeting-single-item .down-content .share ul li a:hover {
@@ -1739,19 +1795,19 @@ section.meetings-page .pagination ul li a:hover {
 
 /* Meeting item column */
 .templatemo-item-col {
-	width: 31%;
+  width: 31%;
 }
 
 @media (max-width: 992px) {
-	.templatemo-item-col {
-		width: 45%;
-	}
+  .templatemo-item-col {
+    width: 45%;
+  }
 }
 
 @media (max-width: 767px) {
-	.templatemo-item-col {
-		width: 100%;
-	}
+  .templatemo-item-col {
+    width: 100%;
+  }
 }
 
 /* 
@@ -1761,67 +1817,66 @@ responsive
 */
 
 @media (max-width: 1300px) {
-  .services .owl-nav .owl-next{
+  .services .owl-nav .owl-next {
     right: -30px;
   }
-  .services .owl-nav .owl-prev{
+  .services .owl-nav .owl-prev {
     left: -25px;
   }
-  .our-courses .owl-nav .owl-next{
+  .our-courses .owl-nav .owl-next {
     right: -30px;
   }
-  .our-courses .owl-nav .owl-prev{
+  .our-courses .owl-nav .owl-prev {
     left: -25px;
   }
 }
 
 @media (max-width: 1200px) {
-  .services .owl-nav .owl-next{
+  .services .owl-nav .owl-next {
     right: -70px;
   }
-  .services .owl-nav .owl-prev{
+  .services .owl-nav .owl-prev {
     left: -65px;
   }
-  .our-courses .owl-nav .owl-next{
+  .our-courses .owl-nav .owl-next {
     right: -70px;
   }
-  .our-courses .owl-nav .owl-prev{
+  .our-courses .owl-nav .owl-prev {
     left: -65px;
   }
 }
 
 @media (max-width: 1085px) {
-  .services .owl-nav .owl-next{
+  .services .owl-nav .owl-next {
     right: -30px;
   }
-  .services .owl-nav .owl-prev{
+  .services .owl-nav .owl-prev {
     left: -25px;
   }
-  .our-courses .owl-nav .owl-next{
+  .our-courses .owl-nav .owl-next {
     right: -30px;
   }
-  .our-courses .owl-nav .owl-prev{
+  .our-courses .owl-nav .owl-prev {
     left: -25px;
   }
 }
 
 @media (max-width: 1005px) {
-  .services .owl-nav .owl-next{
+  .services .owl-nav .owl-next {
     display: none;
   }
-  .services .owl-nav .owl-prev{
+  .services .owl-nav .owl-prev {
     display: none;
   }
-  .our-courses .owl-nav .owl-next{
+  .our-courses .owl-nav .owl-next {
     display: none;
   }
-  .our-courses .owl-nav .owl-prev{
+  .our-courses .owl-nav .owl-prev {
     display: none;
   }
 }
 
 @media (max-width: 992px) {
-
   .main-banner .caption {
     top: 60%;
   }
@@ -1865,11 +1920,9 @@ responsive
   section.contact-us #contact {
     margin-bottom: 30px;
   }
-
 }
 
 @media (max-width: 767px) {
-
   .sub-header .left-content p {
     display: none;
   }
@@ -1885,5 +1938,4 @@ responsive
   .header-area .main-nav .nav li ul.sub-menu li a {
     color: #1f272b;
   }
-
 }
