--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -214,7 +214,8 @@ a {
 }
 
 a:hover {
-  color: #fc3;
+  /*color: #fc3;*/
+  color: #fccf41;
 }
 
 h1,
@@ -254,12 +255,14 @@ body {
 }
 
 ::selection {
-  background: #f5a425;
+  /*background: #f5a425;*/
+  color: #fccf41;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #f5a425;
+  /*background: #f5a425;*/
+  background: #fccf41;
   color: #fff;
 }
 
@@ -283,7 +286,8 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #a12c2f;
+  /* background-color: #a12c2f;*/
+  background-color: #afc650;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -359,12 +363,14 @@ header
 }
 
 .sub-header .right-icons ul li a:hover {
-  color: #f5a425;
+  /*color: #f5a425;*/
+  color: #fccf41;
 }
 
 .sub-header .left-content p em {
   font-style: normal;
-  color: #f5a425;
+  /*color: #f5a425;*/
+  color: #fccf41;
 }
 
 .background-header {
@@ -387,11 +393,13 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #fb5849 !important;
+  /*color: #fb5849 !important;*/
+  color: #fccf41 !important;
 }
 
 .background-header .nav li a.active {
-  color: #fb5849 !important;
+  /*color: #fb5849 !important;*/
+  color: #fccf41 !important;
 }
 
 .header-area {
@@ -474,12 +482,14 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #f5a425 !important;
+  /*color: #f5a425 !important;*/
+  color: #fccf41 !important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #f5a425 !important;
+  /*color: #f5a425 !important;*/
+  color: #fccf41 !important;
   opacity: 1;
 }
 
@@ -541,7 +551,8 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #f5a425 !important;
+  /*color: #f5a425 !important;*/
+  color: #fccf41 !important;
   padding-left: 25px;
 }
 
@@ -1008,7 +1019,7 @@ upcoming meetings
 */
 
 section.upcoming-meetings {
-  background-image: url(../images/pexels-adrien-olichon-2387793.jpg);
+  background-image: url(../images/musicStock/pexels-life-of-pix-8892.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1225,7 +1236,7 @@ courses
 */
 
 section.our-courses {
-  background-image: url(../images/pexels-adrien-olichon-2387793.jpg);
+  background-image: url(../images/musicStock/pexels-life-of-pix-8892.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1441,7 +1452,7 @@ contact us
 */
 
 section.contact-us {
-  background-image: url(../images/pexels-adrien-olichon-2387793.jpg);
+  background-image: url(../images/musicStock/pexels-life-of-pix-8892.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -1515,7 +1526,7 @@ section.contact-us #contact button:hover {
 }
 
 section.contact-us .right-info {
-  background-color: #a12c2f;
+  background-color: #afc650;
   border-radius: 20px;
   padding: 40px;
 }
