--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ html {
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-font-header: "Grape nuts", cursive;
+  --bs-font-header: "Buffalo Regular", cursive;
   --bs-font-body: "Ubuntu", sans-serif;
   --bs-font-sans-serif: "Source Serif 4", sans-serif;
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
@@ -429,6 +429,58 @@ html {
   margin-top: 150px;
 }
 
+.mr-0 {
+  margin-right: 0px;
+}
+.mr-5 {
+  margin-right: 5px;
+}
+.mr-10 {
+  margin-right: 10px;
+}
+.mr-20 {
+  margin-right: 20px !important;
+}
+.mr-30 {
+  margin-right: 30px;
+}
+.mr-40 {
+  margin-right: 40px;
+}
+.mr-50 {
+  margin-right: 50px;
+}
+.mr-60 {
+  margin-right: 60px;
+}
+.mr-70 {
+  margin-right: 70px;
+}
+.mr-80 {
+  margin-right: 80px;
+}
+.mr-90 {
+  margin-right: 90px;
+}
+.mr-100 {
+  margin-right: 100px;
+}
+.mr-110 {
+  margin-right: 110px;
+}
+.mr-120 {
+  margin-right: 120px;
+}
+.mr-130 {
+  margin-right: 130px;
+}
+.mr-140 {
+  margin-right: 140px;
+}
+.mr-150 {
+  margin-right: 150px;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -496,7 +548,7 @@ html {
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--bs-font-body);
   background-color: #040404;
   color: #fff;
   position: relative;
@@ -506,9 +558,9 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/logos/UpliftLogo.png") top right no-repeat;
+  background: #040404 url("../img/logos/UpliftLogo.png") top no-repeat;
   /*background: #040404 url("../img/bg.jpg") top right no-repeat;*/
-  background-size: cover;
+  background-size: contain;
   left: 0;
   right: 0;
   top: 0;
@@ -523,12 +575,12 @@ body::before {
 }
 
 a {
-  color: #18d26e;
+  color: var(--bs-2);
   text-decoration: none;
 }
 
 a:hover {
-  color: #35e888;
+  color: var(--bs-3);
   text-decoration: none;
 }
 
@@ -538,7 +590,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--bs-font-header);
 }
 
 /*--------------------------------------------------------------
@@ -564,7 +616,7 @@ h6 {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: "Poppins", sans-serif;
+  font-family:  var(--bs-font-header);
 }
 
 #header h1 a,
@@ -582,7 +634,7 @@ h6 {
 
 #header h2 span {
   color: #fff;
-  border-bottom: 2px solid #18d26e;
+  border-bottom: 2px solid var(--bs-3);
   padding-bottom: 6px;
 }
 
@@ -611,7 +663,7 @@ h6 {
 }
 
 #header .social-links a:hover {
-  background: #18d26e;
+  background: var(--bs-3);
 }
 
 @media (max-width: 992px) {
@@ -734,7 +786,7 @@ h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: var(--bs-3);
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -878,7 +930,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #4ceb95;
+  background:var(--bs-3) ;
   margin: 4px 10px;
 }
 
@@ -898,7 +950,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #18d26e;
+  color: var(--bs-3);
 }
 
 .about-me .content ul {
@@ -919,7 +971,7 @@ section .container {
 .about-me .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #18d26e;
+  color: var(--bs-3);
   line-height: 0;
 }
 
@@ -950,7 +1002,7 @@ section .container {
   font-size: 24px;
   background: rgba(255, 255, 255, 0.1);
   padding: 12px;
-  color: #18d26e;
+  color: var(--bs-3);
   border-radius: 50px;
   line-height: 0;
 }
@@ -1002,7 +1054,7 @@ section .container {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #18d26e;
+  background-color: var(--bs-3);
 }
 
 /*--------------------------------------------------------------
@@ -1113,7 +1165,7 @@ section .container {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: var(--bs-3);
 }
 
 /*--------------------------------------------------------------
@@ -1140,7 +1192,7 @@ section .container {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #18d26e;
+  color: var(--bs-3);
   margin-bottom: 10px;
 }
 
@@ -1173,8 +1225,8 @@ section .container {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #18d26e;
-  border: 2px solid #18d26e;
+  background: var(--bs-3);
+  border: 2px solid var(--bs-3);
 }
 
 /*--------------------------------------------------------------
@@ -1191,7 +1243,7 @@ section .container {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #18d26e;
+  background: var(--bs-3);
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   display: flex;
@@ -1236,8 +1288,8 @@ section .container {
 }
 
 .services .icon-box:hover {
-  background: #18d26e;
-  border-color: #18d26e;
+  background: var(--bs-3);
+  border-color: var(--bs-3);
 }
 
 .services .icon-box:hover .icon {
@@ -1245,11 +1297,11 @@ section .container {
 }
 
 .services .icon-box:hover .icon i {
-  color: #18d26e;
+  color: var(--bs-3);
 }
 
 .services .icon-box:hover .icon::before {
-  background: #35e888;
+  background: var(--bs-3);
 }
 
 .services .icon-box:hover h4 a,
@@ -1290,7 +1342,7 @@ section .container {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #18d26e;
+  background: var(--bs-3);
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1484,7 +1536,7 @@ section .container {
 }
 
 .portfolio-details .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #18d26e;
+  background-color: var(--bs-3);
 }
 
 /*--------------------------------------------------------------
@@ -1499,7 +1551,7 @@ section .container {
 
 .contact .info-box i.bx {
   font-size: 24px;
-  color: #18d26e;
+  color: var(--bs-3);
   border-radius: 50%;
   padding: 14px;
   float: left;
@@ -1536,7 +1588,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #18d26e;
+  color: var(--bs-3);
 }
 
 .contact .php-email-form {
@@ -1560,7 +1612,7 @@ section .container {
 .contact .php-email-form .sent-message {
   display: none;
   background: rgba(255, 255, 255, 0.08);
-  background: #18d26e;
+  background: var(--bs-3);
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1580,7 +1632,7 @@ section .container {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
+  border: 3px solid var(--bs-3);
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
 }
@@ -1622,7 +1674,7 @@ section .container {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #18d26e;
+  background: var(--bs-3);
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1668,7 +1720,7 @@ section .container {
 }
 
 .credits a {
-  color: #18d26e;
+  color: var(--bs-3);
   transition: 0.3s;
 }
 
