--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,16 @@
 @font-face {
   font-family: "Buffalo Regular";
   src: url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.eot");
-  src: url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.eot?#iefix")format("embedded-opentype"),
-  url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.woff2")format("woff2"),
-  url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.woff")format("woff"),
-  url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.ttf")format("truetype"),
-  url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.svg#Buffalo Regular")format("svg");
+  src: url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.woff2")
+      format("woff2"),
+    url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.woff")
+      format("woff"),
+    url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.ttf")
+      format("truetype"),
+    url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.svg#Buffalo Regular")
+      format("svg");
 }
 
 html {
@@ -66,8 +71,9 @@ html {
   }
 }
 
-.image-fluid {background-size: auto 100% !important;
-  }
+.image-fluid {
+  background-size: auto 100% !important;
+}
 
 /* -- Padding / Margin / Opacity
 --------------------------------------------------------------*/
@@ -543,7 +549,6 @@ html {
   margin-bottom: 0;
 }
 
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -616,7 +621,7 @@ h6 {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family:  var(--bs-font-header);
+  font-family: var(--bs-font-header);
 }
 
 #header h1 a,
@@ -644,16 +649,17 @@ h6 {
 }
 
 #header .social-links {
-  margin-top: 40px;
+  margin-top: 445px;
+  margin-left: 20px;
   display: flex;
 }
 
 #header .social-links a {
-  font-size: 16px;
+  font-size: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(255, 255, 255, 0.1);
+  /*background: rgba(255, 255, 255, 0.1);*/
   color: #fff;
   line-height: 1;
   margin-right: 8px;
@@ -684,6 +690,41 @@ h6 {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+}
+
+/*Animation on MUSIC*/
+.animated-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin-top: 200px;
+  margin-right: 330px;
+}
+
+.animated-text {
+  position: relative;
+  display: inline-block;
+  animation: rotateAndBounce 4s infinite;
+  font-size: 50em;
+  color: var(--bs-3);
+  font-family: var(--bs-font-body);
+}
+
+@keyframes rotateAndBounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0) rotate(0) scale(1);
+  }
+  40% {
+    transform: translateY(-30px) rotate(45deg) scale(1.2);
+  }
+  60% {
+    transform: translateY(-15px) rotate(-45deg) scale(0.8);
   }
 }
 
@@ -930,7 +971,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background:var(--bs-3) ;
+  background: var(--bs-3);
   margin: 4px 10px;
 }
 
