--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -924,6 +924,12 @@ h6 {
 }
 
 /*--------------------------------------------------------------
+# Line art on pages
+--------------------------------------------------------------*/
+.lineArt {
+}
+
+/*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
 section {
