about page edits

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,18 @@
 * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
 * Author: BootstrapMade.com
 * License: https://bootstrapmade.com/license/
-*/
 
+
+* { background-color: rgba(255,0,0,.2); }
+* * { background-color: rgba(0,255,0,.2); }
+* * * { background-color: rgba(0,0,255,.2); }
+* * * * { background-color: rgba(255,0,255,.2); }
+* * * * * { background-color: rgba(0,255,255,.2); }
+* * * * * * { background-color: rgba(255,255,0,.2); }
+* * * * * * * { background-color: rgba(255,0,0,.2); }
+* * * * * * * * { background-color: rgba(0,255,0,.2); }
+* * * * * * * * * { background-color: rgba(0,0,255,.2); }
+*/
 @font-face {
   font-family: "Buffalo Regular";
   src: url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.eot");
@@ -553,6 +563,11 @@ html {
   margin-bottom: 0;
 }
 
+.img-fluid-w{
+height: 35vh;
+justify-content: right;
+display:flex;
+}
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -931,6 +946,8 @@ h6 {
 # Line art on pages
 --------------------------------------------------------------*/
 .lineArt {
+  height: fit-content;
+  display: flex;
 }
 
 /*--------------------------------------------------------------
