--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -728,7 +728,7 @@ h6 {
   animation: rotateAndBounce 4s infinite;
   font-size: 4em;
   color: var(--bs-3);
-  font-family: var(--bs-font-body);
+  font-family: var(--bs-font-body) !important;
 }
 @media (max-width: 768px) {
   .animated-text {
@@ -829,7 +829,7 @@ h6 {
   align-items: center;
   justify-content: space-between;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--bs-font-body);
   font-size: 16px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
@@ -995,7 +995,7 @@ section .container {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--bs-font-body);
 }
 
 .section-title h2::after {
@@ -1013,7 +1013,7 @@ section .container {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--bs-font-body);
   color: #fff;
 }
 
@@ -1090,7 +1090,7 @@ section .container {
 .counts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: var(--bs-font-body);
   font-size: 14px;
 }
 
@@ -1110,7 +1110,7 @@ section .container {
   text-transform: uppercase;
   display: block;
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--bs-font-body);
   color: #fff;
 }
 
@@ -1264,7 +1264,7 @@ section .container {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--bs-font-body);
   color: var(--bs-3);
   margin-bottom: 10px;
 }
