--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 * Author: BootstrapMade.com
 * License: https://bootstrapmade.com/license/
 */
-
+/*
 * {
   background-color: rgba(255, 0, 0, 0.2);
 }
@@ -33,7 +33,7 @@
 * * * * * * * * * {
   background-color: rgba(0, 0, 255, 0.2);
 }
-
+*/
 @font-face {
   font-family: "Buffalo Regular";
   src: url("https://db.onlinewebfonts.com/t/d65cf77ad028b823f585bfa44b3307c6.eot");
