Register: added padding to sub header. MusicTuition: Added more buttons. poulated about lessons and created mini musicians page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,6 +598,10 @@ html {
   justify-content: right;
   display: flex;
 }
+
+.subHeading-pages {
+  padding-top: 20px;
+}
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
